# MathInChem-2021

./: README.md
期末大作业/: CMakeLists.txt  RPMD in a 1D Harmonic Oscillator.py  calculation_1.py  h2opot.f90  water.cp39-win_amd64.pyd
第四次作业/: 第三题计算波函数.py  第二题Velocity Verlet算法.py  第二题向前欧拉法.py  第四次作业.tex  第四次作业计算.py  第四次作业计算Ver2.py
